# plugin-engine-rag

./: .gitignore  Cargo.toml  README.md  build.rs  orchestra.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
src/: lib.rs  main.rs
src/db/: mod.rs  pool.rs
src/index/: manager.rs  mod.rs  reader.rs  schema.rs  writer.rs
src/lsp/: completion.rs  document.rs  hover.rs  mod.rs  resolution.rs
src/memory/: embeddings.rs  mod.rs  observations.rs  schema.rs  search.rs  sessions.rs  storage.rs
src/parser/: mod.rs  registry.rs  symbols.rs  wrapper.rs
src/protocol/: errors.rs  framing.rs  handler.rs  mod.rs  server.rs
src/tools/: directory.rs  health.rs  lsp.rs  memory.rs  mod.rs  parse.rs  search.rs  workspace_data.rs
tests/: all_tools_integration.rs
