[package]
name = "orchestra-rag"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestra-rag"
path = "src/main.rs"

[dependencies]
# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
rcgen = { version = "0.13", features = ["x509-parser"] }
pem = "3.0"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Search
tantivy = "0.22"

# Tree-sitter parsing
tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.23.3"
tree-sitter-go = "0.23.4"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.0"
tree-sitter-md = "0.5.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI + logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
anyhow = "1.0"
thiserror = "2.0"

# Directory walking
ignore = "0.4"

# Rope data structure for efficient text editing
ropey = "1.6"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
